--- a/src/center/center.html
+++ b/src/center/center.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-  <h4>首页</h4>
-  <h1>Hello, {{center2.message}}</h1>
+  <h4 id="ss">首页</h4>
+  <h1>Hello, {{center.message}}</h1>
 </div>
 
-<button class="btn btn-primary" ng-click="center2.changeName()">Change</button>
+<button class="btn btn-primary" ng-click="center.changeName()">Change</button>
